# irodori-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
api/: __init__.py  __main__.py  app.py  audio.py  config.py  duration.py  runtime.py  runtime_imports.py  upstream.py  voices.py
docs/: architecture.md
irodori_tts/: codec.py  config.py  inference_runtime.py  rf.py  tokenizer.py
irodori_tts_lite/: __init__.py  checkpoint_loader.py  fused_int4_linear.py  packed_conv.py  packed_linear.py  weights.py
tests/: conftest.py  test_api.py  test_app_streaming.py  test_audio.py  test_codec.py  test_duration.py  test_rf_sampler.py  test_runtime.py  test_tokenizer.py  test_voices.py
tools/: quantize_dacvae_poc.py
