[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-api"
version = "0.1.0"
description = "OpenAI-compatible local API server for Irodori-TTS-Lite."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
dependencies = [
  "dacvae @ git+https://github.com/facebookresearch/dacvae@414c20785fc3a28373073ea8ef7a1316eeeaca6e",
  "fastapi>=0.115.0",
  "huggingface_hub>=0.24",
  "pydantic-settings>=2.6.0",
  "pyopenjtalk>=0.4.1",
  "python-multipart>=0.0.9",
  "safetensors>=0.4",
  "sentencepiece>=0.1.99,<0.2",
  "soundfile>=0.12",
  "torch>=2.4",
  "torchaudio>=2.4",
  "transformers<5",
  "triton>=3.0; sys_platform == 'linux'",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
irodori-api = "api.__main__:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["api*", "irodori_tts*", "irodori_tts_lite*"]
